# EB23

./: .gitignore  Dockerfile  README.md  build_container.sh  requirements_local.txt  start_container.sh  start_container_linux.sh  start_container_windows.sh
resources/: install_requirements.py  requirements.txt  requirements_local.txt
workspace/python_packages/: README.md
workspace/python_packages/GamePlanning/: Asked_For_Actions.txt  Potential Failures . txt  README.md  TODO.txt
workspace/python_packages/GamePlanning/GP_Interface/: pyproject.toml
workspace/python_packages/GamePlanning/GP_Interface/GP_Interface/: __init__.py  interfaces.py
workspace/python_packages/GamePlanning/GamePlanning/: GameStrategy.py  actions.py  classes.py  config.py  gloabals.py  utils.py
workspace/python_packages/GamePlanning/Openings Visualized/: Opening Strategy.txt
workspace/python_packages/Helpers/Enumerations/: README.md
workspace/python_packages/Helpers/Enumerations/EB23_Enums/: GEM_enums.py  IM_enums.py  Pathfinding_enums.py  __init__.py
workspace/python_packages/Helpers/Logger/: pyproject.toml
workspace/python_packages/Helpers/Logger/src/Logger/: Logger.py
workspace/python_packages/InternalMechanics/IMA_Interface/: pyproject.toml
workspace/python_packages/InternalMechanics/IMA_Interface/IMA_Interface/: __init__.py  interface.py  interfaces.py
workspace/python_packages/Pathfinding/: README.md  pyproject.toml
workspace/python_packages/Pathfinding/Pathfinding/: __init__.py  pathfinding.py  polygon.py  position.py  spline.py
workspace/python_packages/turag_lmc/turag_lmc/: drive.py
workspace/ros_packages/: README.md
workspace/ros_packages/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/ros_packages/log/: latest_build
workspace/ros_packages/src/IMAM/: README.md
workspace/ros_packages/src/actuators/: setup.py
workspace/ros_packages/src/gem/: package.xml  setup.cfg  setup.py
workspace/ros_packages/src/gem/gem/: __init__.py  gem.py  robot_state.py
workspace/ros_packages/src/im_actions/: CMakeLists.txt  package.xml
workspace/ros_packages/src/imam/: README.md  package.xml  setup.cfg  setup.py
workspace/src/Enumerations/: README.md  pyproject.toml
workspace/src/Enumerations/EB23_Enums/: IM_enums.py  README.md  __init__.py
workspace/src/InternalMechanics/: README.md
workspace/src/InternalMechanics/IMA_Interface/: setup.py
(+102 files in other folders)
