[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EB23_Enums"
version = "0.0.1"
authors = [
  { name="Niklas Weber", email="niklas.weber2@mailbox.tu-dresden.de" },
]
description = "Enumerations for EB 2023"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "black",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tools.setuptools]
include-package-data = true
